--- a/EE_lab2.qsf
+++ b/EE_lab2.qsf
@@ -42,9 +42,8 @@ set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY EE_lab2
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "00:26:47  OCTOBER 09, 2025"
-set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name BOARD "DE1-SoC Board"
 set_global_assignment -name VERILOG_FILE SMCtrl.v
 set_global_assignment -name VERILOG_FILE fDiv.v
 set_global_assignment -name VERILOG_FILE DivNSel.v
@@ -57,13 +56,25 @@ set_global_assignment -name BDF_FILE EE_lab2.bdf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_location_assignment PIN_V17 -to SMC_out[3]
-set_location_assignment PIN_Y18 -to SMC_out[2]
-set_location_assignment PIN_AK18 -to SMC_out[1]
-set_location_assignment PIN_AJ19 -to SMC_out[0]
+set_location_assignment PIN_AJ19 -to SMC_out[3]
+set_location_assignment PIN_AK18 -to SMC_out[2]
+set_location_assignment PIN_Y18 -to SMC_out[1]
+set_location_assignment PIN_Y17 -to SMC_out[0]
 set_location_assignment PIN_AB12 -to DIPSW[0]
 set_location_assignment PIN_AC12 -to DIPSW[1]
-set_location_assignment PIN_AA14 -to reset_but
-set_location_assignment PIN_AA15 -to dir_but
+set_location_assignment PIN_AF10 -to reset_but
+set_location_assignment PIN_AF9 -to dir_but
 set_location_assignment PIN_AF14 -to sys_clk
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
+set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
+set_global_assignment -name STRATIXV_CONFIGURATION_SCHEME "PASSIVE SERIAL"
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN ON
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS_WEAK_PULLUP "AS INPUT TRI-STATED"
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name ACTIVE_SERIAL_CLOCK FREQ_100MHZ
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
